@@ -1,0 +1,247 @@
+<?xml version="1.0"?>
+
+<ruleset name="Basic Rules"
+    xmlns="http://pmd.sf.net/ruleset/1.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://pmd.sf.net/ruleset/1.0.0 http://pmd.sf.net/ruleset_xml_schema.xsd"
+    xsi:noNamespaceSchemaLocation="http://pmd.sf.net/ruleset_xml_schema.xsd">
+  <description>
+The Basic Ruleset contains a collection of good practices which everyone should follow.
+  </description>
+   
+	
+    <rule name="UnnecessaryConversionTemporary"
+    		 since="0.1"
+          message="Avoid unnecessary temporaries when converting primitives to Strings"
+          class="net.sourceforge.pmd.lang.java.rule.basic.UnnecessaryConversionTemporaryRule"
+          externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UnnecessaryConversionTemporary">
+      <description>
+Avoid unnecessary temporaries when converting primitives to Strings
+      </description>
+        <priority>3</priority>
+      <example>
+  <![CDATA[
+public String convert(int x) {
+  // this wastes an object
+  String foo = new Integer(x).toString();
+  // this is better
+  return Integer.toString(x);
+}
+ ]]>
+      </example>
+    </rule>
+
+
+
+    <rule name="UnnecessaryReturn"
+    		 since="1.3"
+          message="Avoid unnecessary return statements"
+          class="net.sourceforge.pmd.lang.java.rule.basic.UnnecessaryReturnRule"
+          externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UnnecessaryReturn">
+      <description>
+Avoid unnecessary return statements
+      </description>
+      <priority>3</priority>
+      <example>
+		<![CDATA[
+public class Foo {
+ public void bar() {
+  int x = 42;
+  return;
+ }
+}
+		]]>
+      </example>
+    </rule>
+
+
+    <rule name="UnnecessaryFinalModifier"
+    	  language="java"
+    	  since="3.0"
+          message="Unnecessary final modifier in final class"
+          class="net.sourceforge.pmd.lang.rule.XPathRule"
+          externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UnnecessaryFinalModifier">
+      <description>
+When a class has the final modifier, all the methods are automatically final.
+      </description>
+      <priority>3</priority>
+      <properties>
+          <property name="xpath">
+              <value>
+    <![CDATA[
+//ClassOrInterfaceDeclaration[@Final='true' and @Interface='false']
+/ClassOrInterfaceBody/ClassOrInterfaceBodyDeclaration/MethodDeclaration[@Final='true']
+    ]]>
+              </value>
+          </property>
+      </properties>
+      <example>
+<![CDATA[
+public final class Foo {
+    // This final modifier is not necessary, since the class is final
+    // and thus, all methods are final
+    private final void foo() {
+    }
+}
+
+]]>
+      </example>
+    </rule>
+
+
+    <rule name="UselessOverridingMethod"
+    since="3.3"
+    message="Overriding method merely calls super"
+    class="net.sourceforge.pmd.lang.java.rule.basic.UselessOverridingMethodRule"
+          externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UselessOverridingMethod">
+        <description>
+The overriding method merely calls the same method defined in a superclass
+        </description>
+        <priority>3</priority>
+        <example><![CDATA[
+public void foo(String bar) {
+    super.foo(bar);      //Why bother overriding?
+}
+        ]]></example>
+        <example><![CDATA[
+public String foo() {
+    return super.foo();  //Why bother overriding?
+}
+        ]]></example>
+    </rule>
+
+    <rule  name="UselessOperationOnImmutable"
+           since="3.5"
+           message="An operation on an Immutable object (String, BigDecimal or BigInteger) won't change the object itself"
+           class="net.sourceforge.pmd.lang.java.rule.basic.UselessOperationOnImmutableRule"
+           externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UselessOperationOnImmutable">
+      <description>
+	An operation on an Immutable object (String, BigDecimal or BigInteger) won't change the object itself
+    result of the operation is a new object. Therefore, ignoring the operation result is an error.
+      </description>
+      <priority>3</priority>
+      <example>
+    <![CDATA[
+import java.math.*;
+class Test {
+ void method1() {
+  BigDecimal bd=new BigDecimal(10);
+  bd.add(new BigDecimal(5)); // this will trigger the rule
+ }
+ void method2() {
+  BigDecimal bd=new BigDecimal(10);
+  bd = bd.add(new BigDecimal(5)); // this won't trigger the rule
+ }
+}
+    ]]>
+      </example>
+    </rule>
+
+    <rule name="UnusedNullCheckInEquals"
+    		 language="java"
+        since="3.5"
+        message="Invoke equals() on the object you''ve already ensured is not null"
+        class="net.sourceforge.pmd.lang.rule.XPathRule"
+        externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UnusedNullCheckInEquals">
+    <description>
+    After checking an object reference for null, you should invoke equals() on that object rather than passing it to another object's equals() method.
+    </description>
+	<priority>3</priority>
+    <properties>
+        <property name="xpath">
+        <value>
+        <![CDATA[
+//PrimarySuffix[@Image='equals' and not(../PrimaryPrefix/Literal)]
+ /../PrimarySuffix/Arguments/ArgumentList/Expression
+ /PrimaryExpression/PrimaryPrefix
+ /Name[@Image = ./../../../../../../../../../../Expression/ConditionalAndExpression
+ /EqualityExpression[@Image="!=" and count(./preceding-sibling::*)=0 and
+ ./PrimaryExpression/PrimaryPrefix/Literal/NullLiteral]
+  /PrimaryExpression/PrimaryPrefix/Name/@Image]
+        ]]>
+        </value>
+        </property>
+    </properties>
+		<example>
+		<![CDATA[
+public class Test {
+
+public String method1() { return "ok";}
+public String method2() { return null;}
+
+public void method(String a) {
+String b;
+/*
+I don't know it method1() can be "null"
+but I know "a" is not null..
+I'd better write a.equals(method1())
+*/
+if (a!=null && method1().equals(a)) { // will
+trigger the rule
+//whatever
+}
+
+if (method1().equals(a) && a != null) { //
+won't trigger the rule
+//whatever
+}
+
+if (a!=null && method1().equals(b)) { // won't
+trigger the rule
+//whatever
+}
+
+if (a!=null && "LITERAL".equals(a)) { // won't
+trigger the rule
+//whatever
+}
+
+if (a!=null && !a.equals("go")) { // won't
+trigger the rule
+a=method2();
+if (method1().equals(a)) {
+//whatever
+}
+}
+}
+}
+				]]>
+			</example>
+		</rule>
+
+
+  <rule name="UselessParentheses"
+  		language="java"
+        since="5.0"
+        message="Useless parentheses."
+        class="net.sourceforge.pmd.lang.rule.XPathRule"
+        externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UselessParentheses">
+    <description>Useless parentheses should be removed.</description>
+    <priority>4</priority>
+    <properties>
+       <property name="xpath">
+          <value>
+          <![CDATA[
+//Expression/PrimaryExpression/PrimaryPrefix/Expression[count(*)=1]
+          ]]>
+          </value>
+       </property>
+    </properties>
+    <example>
+    <![CDATA[
+public class Foo {
+
+   private int _bar1;
+   private Integer _bar2;
+
+   public void setBar(int n) {
+      _bar1 = Integer.valueOf((n)); // here
+      _bar2 = (n); // and here
+   }
+
+}
+    ]]>
+    </example>
+  </rule>
+  
+</ruleset>
